<resources>
    <string name="app_name">Wayd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_liste_avis_activity">ListeAvis_activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">493837340997322</string>
    <string name="fb_login_protocol_scheme">fb493837340997322</string>
    <string name="title_activity_barredemenu">barredemenu</string>
    <string name="title_activity_def_preference">DefPreference</string>
    <string name="title_activity_testonglet">Testonglet</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_ameliorerwayd">ameliorerwayd</string>
    <string name="menu_drawer_rechercher">Rechercher</string>
    <string name="menu_drawer_proposer">Proposer</string>
    <string name="menu_drawer_masphere">Ma sphère</string>
    <string name="menu_drawer_mesactivite">Mes activités</string>
    <string name="menu_drawer_ameliorerwayd">Améliorer Wayd</string>
    <string name="menu_drawer_apropos">À propos de Wayd</string>
    <string name="menu_drawer_partager">Partager </string>
    <string name="menu_drawer_deconnexion">Deconnexion</string>
    <string name="changepwd_ancienmotdepasse">Ancien mot de passe</string>
    <string name="changepwd_nouveaumotdepasse">Nouveau mot de passe</string>
    <string name="donneavis_commentpassee">Comment ça s\'est passé ?</string>
    <string name="donneavis_hint_consigne">Avis (120 caractères maximum) </string>
    <string name="donneavis_button_valider">Valider</string>
    <string name="donneavis_switchAmi">Ajoutez à votre sphère</string>
    <string name="apropos_pourandroid">Pour Android</string>
    <string name="apropos_marques">WAYD sont des marques de WAYD</string>
    <string name="apropos_logos">WAYD\'COMMUNITY et les logos</string>
    <string name="apropos_version">Version</string>
    <string name="apropos_waydcommunty">WAYD\'COMMUNITY</string>
    <string name="apropos_conditions">Conditions générales</string>
    <string name="cgu_condition">Conditions d\'utilisations</string>
    <string name="cgu_button_accept">J\'ACCEPTE LES CONDITIONS D\'UTILISATIONS</string>
    <string name="f_critererecherche_hint_motcle">Mots clés</string>
    <string name="f_critererecherche_hint_saisiradresse">Veuillez saisir une adresse</string>
    <string name="f_critererecherche_ck_gps">GPS</string>
    <string name="f_critererecherche_minprogress">0 M</string>
    <string name="f_critererecherche_categorie">Catégories : </string>
    <string name="f_critererecherche_recherche">Rechercher</string>
    <string name="f_profil_modifier">Modifier</string>
    <string name="f_profil_masquer">Masquer</string>
    <string name="f_profil_description">Votre description</string>
    <string name="f_stats_participation">Participation</string>
    <string name="f_stats_participations">Participations</string>
    <string name="f_stats_activite">Activité</string>
    <string name="f_stats_activites">Activités</string>
    <string name="f_stats_commentaire">Commentaire</string>
    <string name="f_stats_commentaires">Commentaires</string>
    <string name="f_stats_cercle">Cercle</string>
    <string name="inscription_rejoignez">Rejoignez la communauté Wayd aujourd\'hui</string>
    <string name="inscription_hint_mail">Adresse email (valide)</string>
    <string name="inscription_hint_mdp">Mot de passe (6 caractères minimum)</string>
    <string name="inscription_hint_confirmmdp">Confirmer le mot de passe </string>
    <string name="inscription_ck_mdp">Afficher le mot de passe</string>
    <string name="inscription_button_inscription">S\'inscrire</string>
    <string name="login_prbconnexion">Problème de connexion ?</string>
    <string name="login_apropos">A propos de WAYD</string>
    <string name="login_buttonconnexion">Connexion</string>
    <string name="login_ck_affichermdp">Afficher le mot de passe</string>
    <string name="login_mdpoublie">Mot de passe oublié ?</string>
    <string name="login_sinscrire">S\'inscrire sur Wayd</string>
    <string name="login_pasdecompte">Pas encore de compte ?</string>
    <string name="menu_list_partemps">Temps restant</string>
    <string name="menu_list_pardistance">Distance</string>
    <string name="pop_signaleractivite_raison">Quelle est la raison ?</string>
    <string name="pop_donneavis_commentaires">Proposez votre avis</string>
    <string name="pop_donneavis_titre">Donnez votre avis</string>
    <string name="pop_donneavis_OK">"Noter"</string>
    <string name="pop_donneavis_No">"Annuler"</string>
    <string name="popup_commentaires_description">"Description de l'activité ..."</string>
    <string name="popup_descriptionprofil_descritpion">Votre description ...</string>
    <string name="popup_modificationActivite_hintDescritpion">"Description de l'activité."</string>
    <string name="popup_modificationActivite_hintTitre">"Titre"</string>
    <string name="popup_modificationActivite_Sauve">"Modifier"</string>
    <string name="popup_modificationActivite_Annule">"Annuler"</string>
    <string name="popup_modificationActivite_titre">"Modifier votre activité"</string>
    <string name="popup_modificationActivite_MaxWaydeurs">"Nombre de Waydeurs"</string>
    <string name="premiereconnexion_bienvenue">Bienvenue sur Wayd</string>
    <string name="premiereconnexion_infos">"Avant d'utiliser le service, nous avons besoin de 3 informations :"</string>
    <string name="premiereconnexion_infopseudo">"Un pseudo unique qui sera visible sur l'application"</string>
    <string name="premiereconnexion_hintpseudo">Pseudo (12 caractères maximum)</string>
    <string name="premiereconnexion_datenaissance">Une date de naissance*</string>
    <string name="premiereconnexion_sexe">Un sexe*</string>
    <string name="premiereconnexion_buttonconfirme">Je confirme</string>
    <string name="premiereconnexion_infoscomplementaire">"*Informations masquées par défaut. Pourquoi est-ce nécessaire d'indiquer mon âge et mon sexe ?"</string>
    <string name="s_detailactivite_signaler">"Signaler l'activité"</string>
    <string name="s_detailactivite_complet">"Complète"</string>
    <string name="s_detailactivite_nbrinscrit">"Nombre d'inscrits : "</string>
    <string name="s_detail_pas_detail_activite">"Pas de détail sur l'activité"</string>
    <string name="s_listeamis_rechercher">"Rechercher"</string>
    <string name="s_listeamis_textinfo">"Organisez ou participez à des activités pour ajouter des Waydeurs à votre sphère"</string>
    <string name="s_menu_principal_rechercher">"Je recherche"</string>
    <string name="s_menu_principal_proposer">"Je propose"</string>
    <string name="s_menu_principal_ennuie">"Je m'ennuie"</string>
    <string name="s_menu_principal_indicateurs">"Statistiques"</string>
    <string name="s_mesmessages_envoyer">"Envoyer un message"</string>
    <string name="s_mesmessages_noResutat">"Pas de message pour le moment"</string>
    <string name="s_mesmessagesactivite_noResutat">"Ce canal de communication vous permettra d\'échanger des messages le temps de l'activité."</string>
    <string name="s_unprofil_signaler">"Signaler"</string>
    <string name="s_messuggestions_alleza">"Paramétrer mes suggestions"</string>
    <string name="signalerbug_prbconnexion">"Problème de connexion"</string>
    <string name="signalerbug_texteinfo">"Vous rencontrez un problème de connexion ? Indiquez votre adresse email et décrivez votre problème."</string>
    <string name="signalerbug_hintmail">"Adresse email"</string>
    <string name="signalerbug_hintchamplibre">"Décrivez votre problème (250 caractères max)"</string>
    <string name="signalerbug_buttonvalider">"Valider"</string>
    <string name="s_proposeactivite_hintitre">"Titre"</string>
    <string name="s_proposeactivite_hintdescription">"Description de l'activité (facultatif)"</string>
    <string name="s_proposeactivite_hintnoadresse">"Veuillez saisir une adresse"</string>
    <string name="s_proposeactivite_ckgps">"GPS"</string>
    <string name="s_proposeactivite_duree">"Durée de l\'activité:" </string>
    <string name="s_proposeactivite_categorie">"Catégorie: "</string>
    <string name="s_proposeactivite_waydeurs">"Waydeurs: "</string>
    <string name="s_proposeactivite_deuxpoints">":"</string>
    <string name="s_proposeactivite_buttonposter">"Poster"</string>
    <string name="s_signaleractivite_signaler">"Signaler une activité :"</string>
    <string name="s_signaleractivite_pourquoi">"Pourquoi la signaler ?"</string>
    <string name="s_signaleractivite_suspecte">"Cette activité est suspecte"</string>
    <string name="s_signaleractivite_dangereuse">"Elle est dangereuse"</string>
    <string name="s_signaleractivite_illicite">"Elle est illicite"</string>
    <string name="s_signaleractivite_gratuitepayante">"Elle est indiquée gratuite mais est payante"</string>
    <string name="s_signaleractivite_autre">"Autres raisons"</string>
    <string name="s_signaleramelioration_titre">"Une suggestion, une idée ?"</string>
    <string name="s_signaleramelioration_aideznous">"Aidez-nous à améliorer Wayd, c'est une communauté nous sommes à votre écoute"</string>
    <string name="s_signaleramelioration_hintchamplibre">"Champ libre"</string>
    <string name="s_signaleramelioration_buttonvalider">"Valider"</string>
    <string name="s_signalerprofil_titre">"Signaler un profil :"</string>
    <string name="s_signalerprofil_quesepassetil">"Que se passe-t-il ?"</string>
    <string name="s_signalerprofil_harcele">"Ce profil me harcèle"</string>
    <string name="s_signalerprofil_proposincorrect">"Il tient des propos insultants/racistes"</string>
    <string name="s_signalerprofil_entreprise">"Il représente une entreprise"</string>
    <string name="s_signalerprofil_autres">"Autres raisons"</string>
    <string name="ActiviteAdapter_complet">"Complète"</string>
    <string name="MesActiviteAdapter_complet">"Complète"</string>
    <string name="F_listActivite_noResutat">"Aucune activité n'est disponible. Modifiez vos critères ou proposez une activité."</string>
    <string name="F_listActivite_noResutatBalise">"Aucune activité n'est disponible. Vous pouvez activer la balise pour proposer une activité."</string>
    <string name="F_MesActivitesEnCours_noResutat">"Vous n'avez pas d'activité en cours."</string>
    <string name="Liste_Amis_noResutat">"Organisez ou participez à des activités pour ajouter des Waydeurs à votre sphère."</string>
    <string name="MesDiscussions_noResutat">"Vous n'avez pas de message en cours."</string>
    <string name="UnProfil_noDescriptionHomme">"Ce waydeur n'a pas encore renseigné sa description"</string>
    <string name="UnProfil_noDescriptionFemme">"Cette waydeuse n'a pas encore renseigné sa description"</string>
    <string name="UnProfil_noDescriptionPro">"Cette société n'a pas encore renseigné sa description"</string>
    <string name="UnProfil_noDescriptionMasque">"Ce waydeur ou cette Waydeuse n'a pas encore renseigné sa description"</string>
    <string name="MesNotifications_noResutat">"Pas de nouvelle notification pour le moment"</string>
    <string name="MesSuggestions_noResutat">"Pas de suggestion pour le moment. Vous pouvez modifier vos paramètres en cliquant ci-dessous"</string>
    <string name="SignalerActivite_description">"Vous souhaitez signaler "</string>
    <string name="SignalerProfil_description">"Vous souhaitez signaler "</string>
    <string name="pseudoVide">"Pseudo vide"</string>
    <string name="proposeactivite_defautTitre">"Je suis disponible"</string>
    <string name="proposeactivite_defautCommentaire">"Si vous êtes dans le coin et que vous vous ennuyez, bienvenue !"</string>
    <string name="maxLengtPseudo">"12"</string>
</resources>