<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondwaydblancxxxhdpi"
    >


    <TextView
        android:id="@+id/suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAllCaps="true"
        android:padding="@dimen/paddingTextview2"
        android:text="@string/inscription_rejoignez"
        android:textStyle="normal|bold"
        android:textSize="@dimen/texte3"
        android:background="#FFD440"
        android:textColor="#fff"/>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <EditText

            android:padding="@dimen/paddingEditTextSingle"
            android:id="@+id/id_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:hint="@string/inscription_hint_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/texte3" />

        <EditText
            android:padding="@dimen/paddingEditTextSingle"
            android:id="@+id/id_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inscription_hint_mdp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:textSize="@dimen/texte3" />

        <EditText
            android:padding="@dimen/paddingEditTextSingle"
            android:id="@+id/id_pwdconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:hint="@string/inscription_hint_confirmmdp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:textSize="@dimen/texte3" />

        <CheckBox
            android:layout_marginTop="@dimen/marge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription_ck_mdp"
            android:id="@+id/id_affmdp"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="@dimen/texte2" />

        <Button
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/id_creercompte"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="#ffa440"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            android:text="@string/inscription_button_inscription"

            android:textSize="@dimen/texte2" />


    </LinearLayout>



</RelativeLayout>
