<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#FFFFFF"

    >

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fondwaydblancxxxhdpi"
        android:padding="30dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/s_menu_principal_proposer"
            android:background="#FFE740"
            android:id="@+id/propose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/titre1"
            android:padding="10dp"

            />

        <Button
            android:padding="10dp"
            android:text="@string/s_menu_principal_rechercher"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:background="#FFC740"
            android:id="@+id/recherche"
            android:layout_height="wrap_content"
            android:layout_above="@+id/propose"
            android:layout_alignLeft="@+id/propose"
            android:layout_alignStart="@+id/propose"
            android:textSize="@dimen/titre1"/>

        <Button
            android:text="@string/s_menu_principal_ennuie"
            android:id="@+id/ennuie"
            android:background="#FFA740"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="@dimen/titre1"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/recherche"
            android:layout_alignLeft="@+id/recherche"
            android:layout_alignStart="@+id/recherche"
            android:padding="10dp"/>

        <Button
            android:textSize="@dimen/titre1"
            android:visibility="invisible"
            android:text="@string/s_menu_principal_indicateurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/admin"
            android:layout_above="@+id/ennuie"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="13dp"
            android:layout_alignParentEnd="true"
            android:padding="10dp"/>

    </RelativeLayout>

</RelativeLayout>
