<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#FFFFFF"
    android:padding="10dp"
    android:theme="@style/AppBaseTheme"
    >

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:text="@string/s_signaleramelioration_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/suggestion"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textSize="@dimen/titre1"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/s_signaleramelioration_aideznous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titreactivite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/titre1"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

                <EditText

                    android:hint="@string/s_signaleramelioration_hintchamplibre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/listesouci"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionSend"
                    android:padding="15dp"
                    android:gravity="left"
                    android:background="@drawable/borduretextfondblanc"
                    android:maxLines="12"
                    android:lines="12"
                    android:maxLength="300"
                    android:textSize="@dimen/titre1"
                    android:layout_marginTop="39dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

            <Button
                android:layout_marginTop="15dp"
                android:background="#ffa740"
                android:text="@string/s_signaleramelioration_buttonvalider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/validersuggestion"
                android:textSize="@dimen/titre1"
                android:layout_below="@+id/listesouci"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>